tests/test_files_pa3/new/SemanticErrors/bad_assignment.ic
class A {
    D e;
}

class B extends A {}

class C extends B {}

class D {
    A c;
}

class E extends D {

     static void main(string[] args){}
     
     void bad_assignmebt() {
         B[] b_1 = new B[10];
         b_1[0] = new A();
     }
    
}